	notably s and z with caron.  This was seen in tcltk output
	from Rcmdr in 2.7.x, but might have occurred elsewhere (and
	earlier).

	This also affected localeToCharset() which incorrectly
	returned "ISO8859-2".

	The same issue seems to have caused problems with starting
	R 2.7.x in the Chinese (Hong Kong S.A.R.) locale on some
	systems (e.g. PR#12658).



		CHANGES IN R VERSION 2.7.2


NEW FEATURES

    o	Rgui has a new menu item 'Html search page' on the Help menu,
	which goes directly to the HTML search form.  This is needed
	by users of Firefox 3, which generates incorrect links in
	search results when the page is accessed via the 'Html help'
	menu item (or via help.start()).


BUG FIXES

    o	Saving a graph in TIFF format could crash R (PR#11804).
    
    o	Rterm in interactive use did not implement R_FlushConsole() fully.

    o	getGraphicsEvent() did not return onMouseMove events while a
	mouse button was depressed.

    o	The confirmation of a new frame for a windows() graphics
	device works harder to give the device focus, including
	bringing it to the top.

    o	glob (used by Sys.glob() and unlink()) was not working correctly
    	on some filename patterns including non-ASCII characters.
    	Part of the problem was specific to 2.7.[01], part has existed
    	since 2.5.0.

    o	Sys.glob() returned a UTF-8 result in 2.7.[01] but failed to
	mark its encoding.

    o	User menus were not properly removed when a graph window was 
	closed.

    o	Rscript -e (and Rterm -e) failed on Vista because the MSVCRT
	function 'tmpfile' is broken on that platform.

    o	Making a .msi installer now works with WiX 2.0.5805.0 (the file
	format had been changed since 2.0.4221.0 as previously tested).

    o	The grid package could set the clipping region outside the
	device region, and the windows() device now intersects the two
	when setting the clipping region.  Once an invalid region was
	set, semi-transparent text and lines might have been omitted.
